@@ -1,4 +1,5 @@
 ---version 2.0.4 yet to be released---
+25-feb-2009 - adelikat - 2in32 - Memwatch - added cancel to save changes? message box
 22-feb-2009 - adelikat - win32 - Lua - made speedmode("turbo") turn on turbo (which employs frameskipping) rather than max speed
 22-feb-2009 - adelikat - Increased lua gui.text height (and DrawTextTransWH() height)
 21-feb-2009 - adelikat - win32 - Lua - Added -lua commandline argment, loads a lua script on startup
